Improve pathfinding debug and also update block states